# circt-semantics

./: .flake8  .gitignore  .gitmodules  AGENT.md  AGENTS.md  DEVELOPER_MANUAL.md  LICENSE  Makefile  README.md  a.kore  a.xml  b.mlir  discovery.md  input.txt  kbuild.toml  log.md  main.py  output.txt  pyproject.toml  run.sh  save_kompile.sh  save_kompile_fast.sh  test  test.md  test.py  todo.md
.github/actions/setup-kcirct-env/: action.yml
.github/actions/setup-kproj-env/: action.yml
.github/actions/with-docker/: action.yml
.github/workflows/: Dockerfile  Test PR.yml  ci.yml
docs/paper/: .gitignore  acmart-pacmpl-template.tex  reference.bib
docs/plans/: 20250824-formal-verification-subsection.md
error/: vdefinition.kore
examples/: README.md  a.mlir  adder.mlir  b.mlir  comb-generic.md  hw-generic.md  hw.md  mini.mlir  seq-generic.md  seq.md  sv-generic.md  sv.md  sv.mlir  util.py
kirct/: Makefile  README.md  kbuild.toml  pyproject.toml
kirct/kirct/: __init__.py  kirct.py  kutils.py
kirct/src/: __main__.py  kirct.py  utils.py
kirct/tests/: __init__.py  test.vcd
refactor/: Makefile  b.xml  c.xml  circt.k  main.k  main.py  mlir.k  readme.md
refactor/circt/: bits.k  circt.k  common.k  conf.k  stdvalue.k
refactor/dialects/: builtin.k  hw.k  seq.k
refactor/error/: kore-exec.sh  spec.kore
refactor/mlir/: builtin.k  mlir.k
refactor/tests/: 1.mlir  3.mlir  4.mlir  counter.mlir  mini_generic.mlir  mini_generic.result  test.mlir
refactoring/semantics/: builtin.k  circt.k  ctrl.k  mlir.k  seq.k  sv.k  unused-preprocess.k
scripts/: diffvcd.py  drop.py
semantics/: bits.k  builtin.k  circt-conf.k  circt.k  comb.k  conf.k  ctrl.k  hw.k  mlir.k  preprocess.k  seq.k  sv.k  types.k
spec/: spec-alu.k  spec-mlir.k  spec-test.k
src/circt/: bits.k  circt.k  common.k  conf.k
src/kcirct/: __main__.py  _prove.py  api.py  circt-semantics.py  circt_semantics.py  err_trace.py  err_trance.py  kutils.py  symtool.py  utils.py  vcd.py  verify_debug.py
src/kproj/: __main__.py
src/mlir/: builtin.k  mlir-conf.k  mlir.k
src/tests/: utils.py
tests/: 1.mlir  2.mlir  adder.mlir  alu.mlir  alu1.mlir  alu2.mlir  counter1.mlir  firreg.mlir  rocket.mlir  rocket_generic.mlir
verification/: DEVELOPER_GUIDE.md  PR_CHECKLIST.md  README.md
verification/cases/: adder_4bit_overflow.mlir  constant_folding_optimized.mlir  constant_folding_original.mlir
verification/docs/: README.md  architecture-guide.md  case-arithmetic-safety.md  case-constant-folding.md  troubleshooting.md  usage-examples.md
verification/scripts/: demo_commands.sh  run_all_verifications.sh  verify_arithmetic_safety.sh  verify_constant_folding.sh
verification/specs/: arithmetic_safety_spec.k  constant_folding_spec.k
(+2466 files in other folders)
