[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kcirct"
version = "0.1.0"
description = ""
authors = [
    "JianhongZhao <zhaojianhong96@gmail.com>",
    "Jinhui Kang",
    "Yiming Chen",
]

[tool.poetry.dependencies]
python = "^3.10"
kframework = "7.1.151"
vcdvcd = "^2.3.4"

[tool.poetry.scripts]
kcirct = "kcirct.__main__:main"

[tool.poetry.plugins.kdist]
circt-semantics = "kcirct.kdist.plugin"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
flake8-type-checking = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyupgrade = "*"
pydocstyle = "*"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true